# hollow-lore-master

./: README.md  app.py  pyproject.toml  requirements.txt
scripts/: app_rag.py  deploy.ps1  evaluator.py
source/evaluation/: eval.py  test.py  tests.jsonl
source/lore_master/core/: config.py
source/lore_master/rag_chat/: fetch_wiki.py  ingest.py
