[project]
name = "hollow-lore-master"
version = "0.1.0"
description = "Hollow Knight lore Q&A bot built with LangChain (LCEL chat + RAG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=6.18.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.2",
]   # managed in requirements.txt

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/lore_master"]
